--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,23 +1,31 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Books</h1>
-<h1>This is a test version!!!!</h1>
 
 <table>
   <thead>
     <tr>
+      <th>ID</th>
       <th>Title</th>
-      <th colspan="3"></th>
+      <th>Author</th>
+      <th>Price</th>
+      <th>Published Date</th>
+      <th>Actions</th>
+      <th colspan="4"></th>
     </tr>
   </thead>
 
   <tbody>
     <% @books.each do |book| %>
       <tr>
+        <td><%= book.id %></td>
         <td><%= book.title %></td>
+        <td><%= book.author %></td>
+        <td><%= book.price %></td>
+        <td><%= book.published %></td>
         <td><%= link_to 'Show', book %></td>
         <td><%= link_to 'Edit', edit_book_path(book) %></td>
-        <td><%= link_to 'Destroy', book, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Destroy', delete_book_path(book) %></td>
       </tr>
     <% end %>
   </tbody>
