--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,9 +1,34 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Title:</strong>
-  <%= @book.title %>
-</p>
+<div class="Book show">
+  <h2>Book Detail</h2>
+  <table summary="Book detail view">
+    <tr>
+      <th><strong>Title:</strong></th>
+      <td><%= @book.title %></td>
+    </tr>
+    <tr>
+      <th><strong>Author:</strong></th>
+      <td><%= @book.author %></td>
+    </tr>
+    <tr>
+      <th><strong>Price:</strong></th>
+      <td><%= @book.price %></td>
+    </tr>
+    <tr>
+      <th><strong>Published Date:</strong></th>
+      <td><%= @book.published %></td>
+    </tr>
+    <tr>
+      <th><strong>Created:</strong></th>
+      <td><%= @book.created_at %></td>
+    </tr>
+    <tr>
+      <th><strong>Updated:</strong></th>
+      <td><%= @book.updated_at %></td>
+    </tr>
+  </table>
+</div>
 
 <%= link_to 'Edit', edit_book_path(@book) %> |
 <%= link_to 'Back', books_path %>
